[package]
name = "phantom-nlp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
phantom-context = { path = "../phantom-context" }
log.workspace = true
anyhow.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"

[lints]
workspace = true
