[package]
name = "phantom-nlp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
phantom-context = { path = "../phantom-context" }
log.workspace = true
anyhow.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
thiserror = "2"
ureq = { version = "3", features = ["json", "platform-verifier"] }

[features]
# Exposes `MockLlmBackend` for integration tests in downstream crates.
# Do NOT enable in production builds.
# Declaring this feature closes #287 (undeclared `testing` cfg condition).
testing = []

[dev-dependencies]
# Derive `Default` for test fixtures without touching production code.
tempfile = "3"

[lints]
workspace = true
