[package]
name = "phantom-plugins"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
log.workspace = true
anyhow.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
wasmtime = { version = "44", default-features = false, features = ["cranelift", "runtime", "wat"] }

[dev-dependencies]
tempfile = "3"
wat = "1"

[lints]
workspace = true
