[package]
name = "phantom-relay"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Stateless WebSocket message broker routing opaque envelopes by PeerId"

[lib]
name = "phantom_relay"
path = "src/lib.rs"

[[bin]]
name = "phantom-relay"
path = "src/main.rs"

[features]
default = []
tls = ["dep:rustls", "dep:tokio-rustls"]

[dependencies]
log.workspace = true
env_logger.workspace = true
anyhow.workspace = true
uuid = { workspace = true }
chrono = { workspace = true }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
blake3 = "1"

tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"

toml = "0.8"

rustls = { version = "0.23", optional = true }
tokio-rustls = { version = "0.26", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }

[lints]
workspace = true
