[package]
name = "phantom-renderer"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
wgpu.workspace = true
winit.workspace = true
pollster.workspace = true
bytemuck.workspace = true
cosmic-text.workspace = true

log.workspace = true
anyhow.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
etagere = "0.2"
png = "0.17"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
