[package]
name = "phantom-session"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
phantom-agents = { path = "../phantom-agents" }
phantom-context = { path = "../phantom-context" }
log.workspace = true
anyhow.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
