[package]
name = "phantom-skill-host"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Runtime dylib loader and hot-module host for Phantom skill crates."

[features]
# Enable hot-module reload via libloading + notify.
# Mirrored from phantom-renderer's `live-reload` feature.
# Only active in debug builds; release builds are always the static path.
hot-modules = ["dep:libloading", "dep:notify"]

[dependencies]
log.workspace = true
anyhow.workspace = true

# Optional: only pulled in when the `hot-modules` feature is enabled.
libloading = { workspace = true, optional = true }
notify     = { workspace = true, optional = true }

# Always depend on phantom-semantic so callers get the concrete types.
phantom-semantic = { path = "../phantom-semantic" }
# Always depend on phantom-nlp so callers get the concrete LlmBackend types.
phantom-nlp = { path = "../phantom-nlp" }

[dev-dependencies]
tempfile   = { workspace = true }
libloading = { workspace = true }
phantom-nlp = { path = "../phantom-nlp", features = ["testing"] }

[lints]
workspace = true
