[package]
name = "phantom-ui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
phantom-renderer = { path = "../phantom-renderer" }
phantom-adapter = { path = "../phantom-adapter" }
taffy.workspace = true
log.workspace = true
anyhow.workspace = true

[lints]
workspace = true
