[package]
name = "phantom-vision"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
base64 = "0.22"
png = "0.17"
reqwest = { version = "0.12", features = ["json"] }

[features]
# Exposes `MockVisionBackend` for integration tests in downstream crates.
# Declaring this feature closes #285/#291 (undeclared `test-utils` cfg +
# avoids std::env::remove_var in tests by using MockVisionBackend instead).
test-utils = []

[dev-dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }

[lints]
workspace = true
